# pillar

./: .clang-format  .gitignore  CMakeLists.txt
include/pillar/types/: list.h  number.h  tag.h
include/pillar/utilities/: functional.h  singleton.h  timeit.h
samples/hello/: CMakeLists.txt
tests/: CMakeLists.txt  types.test.cc  utilities.test.cc
